--- a/webview-ui/src/i18n/locales/fr/settings.json
+++ b/webview-ui/src/i18n/locales/fr/settings.json
@@ -397,10 +397,12 @@
 		},
 		"condensingThreshold": {
 			"label": "Seuil de condensation du contexte",
-			"selectProfile": "Select profile for threshold",
-			"defaultProfile": "Default (applies to all unconfigured profiles)",
-			"defaultDescription": "This threshold applies to all profiles unless overridden",
-			"profileDescription": "Custom threshold for this specific profile"
+			"selectProfile": "Configurer le seuil pour le profil",
+			"defaultProfile": "Par défaut global (tous les profils)",
+			"defaultDescription": "Lorsque le contexte atteint ce pourcentage, il sera automatiquement condensé pour tous les profils sauf s'ils ont des paramètres personnalisés",
+			"profileDescription": "Seuil personnalisé pour ce profil uniquement (remplace le défaut global)",
+			"inheritDescription": "Ce profil hérite du seuil par défaut global ({{threshold}}%)",
+			"usesGlobal": "(utilise global {{threshold}}%)"
 		}
 	},
 	"terminal": {
