--- a/webview-ui/src/i18n/locales/it/settings.json
+++ b/webview-ui/src/i18n/locales/it/settings.json
@@ -396,11 +396,13 @@
 			"description": "Numero massimo di file che lo strumento 'read_file' può elaborare contemporaneamente. Valori più alti possono velocizzare la lettura di più file piccoli ma aumentano l'utilizzo della memoria."
 		},
 		"condensingThreshold": {
-			"label": "Soglia di condensazione del contesto",
-			"selectProfile": "Select profile for threshold",
-			"defaultProfile": "Default (applies to all unconfigured profiles)",
-			"defaultDescription": "This threshold applies to all profiles unless overridden",
-			"profileDescription": "Custom threshold for this specific profile"
+			"label": "Soglia di attivazione condensazione",
+			"selectProfile": "Configura soglia per profilo",
+			"defaultProfile": "Predefinito globale (tutti i profili)",
+			"defaultDescription": "Quando il contesto raggiunge questa percentuale, verrà automaticamente condensato per tutti i profili a meno che non abbiano impostazioni personalizzate",
+			"profileDescription": "Soglia personalizzata solo per questo profilo (sovrascrive il predefinito globale)",
+			"inheritDescription": "Questo profilo eredita la soglia predefinita globale ({{threshold}}%)",
+			"usesGlobal": "(usa globale {{threshold}}%)"
 		}
 	},
 	"terminal": {
