--- a/webview-ui/src/i18n/locales/zh-CN/settings.json
+++ b/webview-ui/src/i18n/locales/zh-CN/settings.json
@@ -396,11 +396,13 @@
 			"description": "read_file 工具可以同时处理的最大文件数。较高的值可能会加快读取多个小文件的速度，但会增加内存使用量。"
 		},
 		"condensingThreshold": {
-			"label": "上下文压缩阈值",
-			"selectProfile": "Select profile for threshold",
-			"defaultProfile": "Default (applies to all unconfigured profiles)",
-			"defaultDescription": "This threshold applies to all profiles unless overridden",
-			"profileDescription": "Custom threshold for this specific profile"
+			"label": "压缩触发阈值",
+			"selectProfile": "配置配置文件阈值",
+			"defaultProfile": "全局默认（所有配置文件）",
+			"defaultDescription": "当上下文达到此百分比时，将自动为所有配置文件压缩，除非它们有自定义设置",
+			"profileDescription": "仅此配置文件的自定义阈值（覆盖全局默认）",
+			"inheritDescription": "此配置文件继承全局默认阈值（{{threshold}}%）",
+			"usesGlobal": "（使用全局 {{threshold}}%）"
 		}
 	},
 	"terminal": {
