--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -602,6 +602,6 @@
 		"customArn": "Custom ARN",
 		"useCustomArn": "Use custom ARN..."
 	},
-	"includeMaxOutputTokens": "Include Max Output Tokens",
+	"includeMaxOutputTokens": "Include max output tokens",
 	"includeMaxOutputTokensDescription": "Send max output tokens parameter in API requests. Some providers may not support this."
 }
