feat: implement parentRulesMaxDepth setting
This commit implements the parentRulesMaxDepth setting which controls how many parent directories are searched for .roo/rules files. The setting is accessible from the Modes view and persists across sessions.

Key changes:
- Added parentRulesMaxDepth to the global settings schema
- Added UI component in ModesView.tsx with improved styling
- Updated state management to properly persist the setting

Signed-off-by: Eric Wheeler <roo-code@z.ewheeler.org>

--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -34,7 +34,11 @@
 		"about": "About Roo Code"
 	},
 	"prompts": {
-		"description": "Configure support prompts that are used for quick actions like enhancing prompts, explaining code, and fixing issues. These prompts help Roo provide better assistance for common development tasks."
+		"description": "Configure support prompts that are used for quick actions like enhancing prompts, explaining code, and fixing issues. These prompts help Roo provide better assistance for common development tasks.",
+		"parentRulesMaxDepth": {
+			"label": "Parent Rule Search Levels",
+			"description": "Maximum directory levels to search upward for .roo/rules. Default: 1 (workspace directory only). Higher values enable hierarchical loading from parent directories (feature, repository, organization, user-global, etc, …), where large values search to the filesystem root."
+		}
 	},
 	"codeIndex": {
 		"title": "Codebase Indexing",
